--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -31,6 +31,64 @@ header {
   background-color: #fafafa;
 }
 
+img {
+  outline: none;
+}
+
+img:focus {
+  outline: none;
+}
+/* Search Bar */
+
+.search-bar {
+  position: absolute;
+  top: 12px;
+  left: 50%;
+  transform: translateX(-50%);
+  z-index: 0;
+  padding: 3px 12px;
+  border-radius: 8px;
+  box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.1);
+}
+
+.search-input {
+  width: 200px;
+  padding: 8px;
+  border-radius: 4px;
+  outline: none;
+  font-size: 1rem;
+}
+
+.suggestions-list {
+  list-style-type: none;
+  border-radius: 8px;
+  padding: 0;
+  margin: 0;
+  z-index: 10;
+  max-height: 200px;
+  overflow: hidden;
+}
+
+.suggestion-item {
+  display: block;
+  align-items: center;
+  padding: 8px 16px;
+  width: 100%;
+}
+
+.suggestion-item img {
+  border-radius: 50%;
+  width: 36px;
+  height: 36px;
+  margin-right: 8px;
+}
+
+.suggestion-item span {
+  background-color: transparent;
+  padding: 0;
+  margin: 0;
+}
+
 .media-preview-container {
   display: flex;
   justify-content: center;
@@ -106,6 +164,16 @@ header {
   word-wrap: break-word;
 }
 
+/* Mini Audio Player */
+button {
+  pointer-events: auto;
+}
+.fixed {
+  z-index: 1000;
+}
+.post-container {
+  z-index: 0;
+}
 /* Media Styling (Images) */
 .post-media {
   width: 100%;
@@ -211,6 +279,10 @@ header {
 .post-media {
   border: none;
   box-shadow: none;
+}
+
+.dropdown-container {
+  position: absolute;
 }
 
 /* Profile Page */
@@ -341,9 +413,72 @@ header {
   color: #555;
 }
 
-/* Audio Player */ 
+/* Audio Player */
+.mini-audio-player {
+  z-index: 1000;
+}
+/* Post Modal */
 
+.post-modal {
+  width: 70%;
+  max-width: 500px;
+  background: white;
+  border-radius: 10px;
+  padding: 20px;
+  position: relative;
+}
 
+.post-modal-overlay {
+  background-color: rgba(0, 0, 0, 0.7);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.close-modal-button {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  background: transparent;
+  border: none;
+  font-size: 18px;
+  cursor: pointer;
+}
+
+.post-modal-details {
+  margin-bottom: 15px;
+}
+
+.post-modal-timestamp {
+  font-size: 1px;
+  color: gray;
+  margin-bottom: 10px;
+}
+
+.post-modal-hashtags ul {
+  display: flex;
+  gap: 5px;
+  list-style: none;
+  padding: 0;
+}
+
+.post-modal-hashtags .hashtag {
+  color: #0073e6;
+  cursor: pointer;
+}
+
+.post-modal-comments {
+  margin-top: 20px;
+}
+
+.post-modal-comments .comment {
+  margin-bottom: 10px;
+  font-size: 0.9em;
+}
+
+.post-modal-comments .comment strong {
+  color: #0073e6;
+}
 
 /* Typography and Text Styling */
 h3 {
